# darkscraper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  start.sh
config/: default.toml  i2pd.conf  lokinet-bootstrap.signed
crates/core/: Cargo.toml
crates/core/src/: config.rs  cookie_store.rs  error.rs  lib.rs  types.rs  waiting_screen.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: correlation.rs  form_spider.rs  infra_prober.rs  lib.rs  metadata_extractor.rs  pattern_mutator.rs  source_miner.rs
crates/frontier/: Cargo.toml
crates/frontier/src/: lib.rs
crates/networks/: Cargo.toml
crates/networks/src/: freenet.rs  hyphanet.rs  i2p.rs  lib.rs  lokinet.rs  tor.rs  waiting_handler.rs  zeronet.rs
crates/parser/: Cargo.toml
crates/parser/src/: entities.rs  html.rs  lib.rs
crates/registration/: Cargo.toml
crates/registration/src/: auto_register.rs  auto_register_inline.rs  browser.rs  captcha.rs  captcha_free.rs  email.rs  email_provider_priority.rs  email_verifier.rs  form_filler.rs  lib.rs  login_verifier.rs  multilingual.rs  post_registration_crawler.rs  registrar.rs  temp_email_providers.rs  verification_helpers.rs
crates/registration/src/adapters/: generic_adapter.rs  mod.rs
crates/registration/src/core/: context.rs  mod.rs  result.rs  types.rs
crates/registration/src/detection/: field_classifier.rs  form_detector.rs  mod.rs  submit_detector.rs  success_detector.rs
crates/registration/src/orchestrator/: link_detector.rs  mod.rs  registration_engine.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_init.sql  002_registration.sql  003_authenticated_crawling.sql
crates/storage/src/: account_status.rs  email_queries.rs  lib.rs  registration_queries.rs
docker/: Dockerfile.registration
docker/freenet/: Dockerfile  entrypoint.sh  freenet-defaults.ini
docker/hyphanet/: Dockerfile  entrypoint.sh  freenet-defaults.ini
docker/i2p/: Dockerfile  README.md
docker/i2p/router.config/: router.config.tmp
docker/lokinet-socks/: Dockerfile  entrypoint.sh  lokinet-docker.ini
docker/zeronet/: Dockerfile  entrypoint.sh
grafana/dashboards/: auto-registration-monitor.json  correlations.json  darkscraper.json  freenet.json  hyphanet.json  i2p.json  lokinet.json  monitor.json  network-analysis.json  overview.json  registration-dashboard.json  search.json  tor.json  zeronet.json
grafana/provisioning/dashboards/: default.yml  registration.yml
grafana/provisioning/datasources/: postgres.yml
src/: cli.rs  commands.rs  crawl.rs  main.rs  seeds.rs
src/commands/: auto_register.rs  mod.rs  search.rs  status.rs
