[package]
name = "darkscraper-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
darkscraper-core = { path = "../core" }
regex = "1"
once_cell = "1"
scraper = "0.21"
sha2 = "0.10"
tracing = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
