[package]
name = "darkscraper-networks"
version = "0.1.0"
edition = "2021"

[dependencies]
darkscraper-core = { path = "../core" }
rquest = { version = "5", features = ["cookies", "socks"] }
rquest-util = "2"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "socks", "rustls-tls"] }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
regex = "1"
rand = "0.8"
