[package]
name = "darkscraper-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
darkscraper-core = { path = "../core" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono"] }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
